force-app/main/default/objects/xDO_TTHAIR_Itinerary_Detail__c/xDO_TTHAIR_Itinerary_Detail__c.object-meta.xml
<CustomObject>
    <label>TTH Itinerary Detail</label>
    <nameField>
        <displayFormat>ITN-{00000}</displayFormat>
        <label>Itin Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>