force-app/main/default/objects/xDO_TTHAIR_Itinerary_Detail__c/fields/xDO_TTHAIR_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Confirmation__c</fullName>
    <label>Confirmation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>