force-app/main/default/objects/xDO_TTHAIR_Itinerary_Detail__c/fields/xDO_TTHAIR_Date__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>