force-app/main/default/objects/xDO_TTHAIR_Itinerary_Detail__c/fields/xDO_TTHAIR_Details__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>