force-app/main/default/objects/xDO_TTHAIR_Itinerary_Detail__c/fields/xDO_TTHAIR_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>xDO_TTHAIR_Ininerary__c</referenceTo>
    <relationshipName>Details</relationshipName>
    <type>Lookup</type>
</CustomField>